# lover-agent

./: .env  .env.example  .gitignore  CLAUDE.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
adapters/: html_parser.py
config/: settings.py
docs/superpowers/plans/: 2026-05-26-chat-retrieval-agent-plan.md
docs/superpowers/specs/: 2026-05-26-chat-retrieval-agent-design.md
llm/: eval_llm.py  llm.py
models/: models_download.py
rag/: rag.ipynb
rag/chroma_db_local_base/: chroma.sqlite3
tests/: test_html_parser.py
utils/: logger.py
