[project]
name = "lover-agent"
version = "0.1.0"
description = "基于 LangChain 的聊天记录检索 Agent"
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-core>=0.3.0",
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "httpx>=0.27.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "langchain-chroma>=1.1.0",
    "langchain-openai>=1.2.2",
    "pypdf>=6.12.2",
    "ipykernel>=7.2.0",
    "langchain-text-splitters>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "torch==2.3.1",
    "modelscope>=1.37.1",
    "torchvision==0.18.1",
    "torchaudio==2.3.1",
    "transformers==4.44.2",
    "numpy==1.26.4",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "config", "rag", "utils"]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true  # 声明这是一个显式源，只有指定包才会使用
